# rem3

./: .envrc  .gitignore  Dockerfile  Pipfile  README.md  create_tables.py  delete_tables.py  docker-compose.yml  flake.nix  pyproject.toml  recreate_tables.py  run_bot.py
bot/: checks.py  commands.py  embeds.py  main.py  trigger_timer.py  util.py
configs/: database_config_template.json  discord_config _template.json
docs/: index.html  main.css
lib/: common.py  database.py  time_handle.py
src/bot/: checks.py  commands.py  embeds.py  main.py  util.py
src/lib/: common.py  database.py  time_handle.py
